<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="25dp"
    tools:context=".fragments.UploadFragment"
    tools:ignore="ButtonStyle">

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imagePreview" />

    <TextView
        android:id="@+id/tvFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/filename_placeholder"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePreview" />

    <ProgressBar
        android:layout_marginTop="15dp"
        android:paddingVertical="5dp"
        android:scaleY="1"
        android:progressDrawable="@drawable/progress_rounded"
        style="?android:attr/progressBarStyleHorizontal"
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvFileName" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">

        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="2"
            android:text="@string/camera"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonGallery"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginStart="15dp"
            android:layout_weight="2"
            android:text="@string/gallery"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonUpload"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:text="@string/upload"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>